--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -3,8 +3,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   @if(isDev)
-  <script type="module" src="http://localhost:2000/@vite/client"></script>
-  <script type="module" src="http://localhost:2000/src/main.ts"></script>
+  <script type="module" src="http://{{ process.env.VITE_HOST || "127.0.0.1" }}:{{ process.env.VITE_PORT || "2000" }}/@vite/client"></script>
+  <script type="module" src="http://{{ process.env.VITE_HOST || "127.0.0.1" }}:{{ process.env.VITE_PORT || "2000" }}/src/main.ts"></script>
 
   <script nomodule src="https://unpkg.com/@senx/discovery-widgets/dist/discovery/discovery.js"></script>
   <script type="module" src="https://unpkg.com/@senx/discovery-widgets/dist/discovery/discovery.esm.js"></script>
