--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -1,4 +1,4 @@
-<html>
+<html class="light">
 <meta charset="utf-8">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
