--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -6,6 +6,8 @@
   <script type="module" src="http://{{ process.env.VITE_HOST || "127.0.0.1" }}:{{ process.env.VITE_PORT || "2000" }}/@vite/client"></script>
   <script type="module" src="http://{{ process.env.VITE_HOST || "127.0.0.1" }}:{{ process.env.VITE_PORT || "2000" }}/src/main.ts"></script>
 
+<!--
+  TODO: Change this, but this is too slow in dev omg, can't work with this enabled
   <script nomodule src="https://unpkg.com/@senx/discovery-widgets/dist/discovery/discovery.js"></script>
   <script type="module" src="https://unpkg.com/@senx/discovery-widgets/dist/discovery/discovery.esm.js"></script>
 
@@ -14,6 +16,8 @@
   <script type="module" src="https://unpkg.com/@hexa-ai/discovery-plugin-csv-export/dist/discovery-plugin-csv-export/discovery-plugin-csv-export.esm.js"></script>
   <script nomodule src="https://unpkg.com/@hexa-ai/discovery-plugin-sensor-gauge/dist/discovery-plugin-sensor-gauge/discovery-plugin-sensor-gauge.js"></script>
   <script type="module" src="https://unpkg.com/@hexa-ai/discovery-plugin-sensor-gauge/dist/discovery-plugin-sensor-gauge/discovery-plugin-sensor-gauge.esm.js"></script>
+-->
+
   @end
 
   @if(assetsData.found)
